优化参数信息